--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "ZString",
   "description": "Zero Allocation StringBuilder for .NET Core and Unity.",
   "unity": "2019.3",
-  "unityRelease": "13f1",},
+  "unityRelease": "13f1",
   "author": {
     "name": "Cysharp",
     "url": "https://cysharp.co.jp/en/"
